fix: Make side nav bars stretch the entire height

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,17 @@ body {
   color: white;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  min-height: 100vh;
+  background: rgb(34, 23, 23);
+  background: linear-gradient(
+    210deg,
+    rgba(34, 23, 23, 1) 0%,
+    rgba(20, 19, 19, 1) 20%,
+    rgba(19, 20, 20, 1) 85%,
+    rgba(20, 24, 24, 1) 100%
+  );
+  display: flex;
 }
 
 code {
