--- a/src/screens/Main/styles.css
+++ b/src/screens/Main/styles.css
@@ -26,6 +26,7 @@
 
 .center-container {
   display: flex;
+  height: 100%;
 }
 
 .center-content {
